--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,13 +17,17 @@
   <body class="page__body">
     <div class="page__wrapper">
       <header class="page-header">
-        <nav class="main-nav main-nav--closed main-nav--nojs">
-          <a class="main-nav__header-logo" href="index.html">
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/index/header/logotype-desktop.svg">
-              <source media="(min-width: 768px)" srcset="img/index/header/logotype-tablet.svg">
-              <img src="img/index/header/logotype.svg" alt="Логотиа Седоны">
-            </picture>
+        <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs">
+          <a class="main-nav__logo-link" href="index.html">
+            <svg class="main-nav__logo main-nav__logo--visible-desktop" aria-label="Логотип Седоны." aria-hidden="true" focusable="false" width="187" height="96">
+              <use xlink:href="img/sprite.svg#logotype-desktop"></use>
+            </svg>
+            <svg class="main-nav__logo main-nav__logo--visible-tablet" aria-label="Логотип Седоны." aria-hidden="true" focusable="false" width="102" height="84">
+              <use xlink:href="img/sprite.svg#logotype-tablet"></use>
+            </svg>
+            <svg class="main-nav__logo main-nav__logo--visible-phone" aria-label="Логотип Седоны." aria-hidden="true" focusable="false" width="102" height="84">
+              <use xlink:href="img/sprite.svg#logotype"></use>
+            </svg>
           </a>
           <button class="main-nav__button" type="button" aria-label="Открыть меню / Закрать меню">
             <span class="main-nav__toggle"></span>
@@ -35,7 +39,7 @@
                   <a class="main-nav__link" href="index.html">Главная</a>
                 </li>
                 <li class="main-nav__item-inserted">
-                  <a class="main-nav__link main-nav__link--current">Фото и видео</a>
+                  <a class="main-nav__link  main-nav__link--current">Фото и видео</a>
                 </li>
               </ul>
             </li>
@@ -55,10 +59,15 @@
       <main class="main main--inner">
         <div class="main__introduce introduce introduce--inner container">
           <div class="introduce__img-wrapper introduce__img-wrapper--inner">
-            <picture>
-              <source media="(min-width: 768px)" srcset="img/catalog/introduce-section/SEDONA-tablet.svg">
-              <img src="img/catalog/introduce-section/SEDONA.svg" alt="Большой текст приветствия от Седоны">
-            </picture>
+            <svg class="introduce__svg introduce__svg--visible-desktop" aria-label="Большой текст приветствия от Седоны." aria-hidden="true" focusable="false" width="460" height="80">
+              <use xlink:href="img/sprite.svg#SEDONA-desktop"></use>
+            </svg>
+            <svg class="introduce__svg introduce__svg--visible-tablet" aria-label="Большой текст приветствия от Седоны." aria-hidden="true" focusable="false" width="456" height="80">
+              <use xlink:href="img/sprite.svg#SEDONA-tablet"></use>
+            </svg>
+            <svg class="introduce__svg introduce__svg--visible-phone" aria-label="Большой текст приветствия от Седоны." aria-hidden="true" focusable="false" width="229" height="39">
+              <use xlink:href="img/sprite.svg#SEDONA"></use>
+            </svg>
           </div>
         </div>
         <section class="photo-presentation">
@@ -183,21 +192,30 @@
             </picture>
             <div class="video-presentation__media-player media-player">
               <button class="media-player__button media-player__button--replay" type="button" aria-label="Кнопка проигрыватель">
-                <svg class="media-player__button-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="20">
+                <!-- <svg class="media-player__button-icon" xmlns="http://www.w3.org/2000/svg" >
                   <path d="M8 4V0L3 5l5 5V6a6 6 0 0 1 6 6 6 6 0 0 1-6 6 6 6 0 0 1-6-6H0a8 8 0 0 0 8 8 8 8 0 0 0 8-8 8 8 0 0 0-8-8Z" />
+                </svg> -->
+                <svg class="media-player__button-icon" aria-label="Кнопка проигрыватель" aria-hidden="true" focusable="false" width="16" height="20">
+                  <use xlink:href="img/sprite.svg#replay"></use>
                 </svg>
               </button>
               <div class="media-player__progress progress">
                 <button class="progress__button" aria-label="Бегунок прогресса видео"></button>
               </div>
               <button class="media-player__button media-player__button--subtitles" type="button" aria-label="Кнопка cубтитров">
-                <svg class="media-player__button-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="20">
+                <!-- <svg class="media-player__button-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="20">
                   <path d="M29 0H3a3 3 0 0 0-3 3v14a3 3 0 0 0 3 3h26a3 3 0 0 0 3-3V3a3 3 0 0 0-3-3ZM14.4 15.9l-1.7.1c-.7 0-1.4-.1-2-.3-.6-.2-1.2-.6-1.6-1-.4-.4-.8-1.1-1.1-1.9-.3-.8-.4-1.7-.4-2.8 0-1.1.2-2.1.5-2.9.3-.8.7-1.4 1.2-1.9s1.1-.8 1.7-1a10 10 0 0 1 3.5-.1l1.1.3-.4 1.9-.9-.3H13c-.9 0-1.6.3-2.2 1-.6.7-.8 1.7-.8 3l.2 1.6c.1.5.3.9.6 1.3l1 .8c.4.2.9.3 1.4.3l1.3-.1.9-.4.5 1.8-1.5.6Zm8.7 0-1.7.1c-.7 0-1.4-.1-2-.3-.6-.2-1.2-.6-1.6-1a4 4 0 0 1-1.1-1.9c-.3-.8-.4-1.7-.4-2.8 0-1.1.2-2.1.5-2.9.3-.8.7-1.4 1.2-1.9s1.1-.8 1.7-1a10 10 0 0 1 3.5-.1l1.1.3-.4 1.9L23 6h-1.3c-.9 0-1.6.3-2.2 1-.6.7-.8 1.7-.8 3l.2 1.6c.1.5.3.9.6 1.3l1 .8c.4.2.9.3 1.4.3l1.3-.1.9-.4.5 1.8-1.5.6Z" />
+                </svg> -->
+                <svg class="media-player__button-icon" aria-label="Кнопка cубтитров" aria-hidden="true" focusable="false" width="32" height="20">
+                  <use xlink:href="img/sprite.svg#subtitles"></use>
                 </svg>
               </button>
               <button class="media-player__button media-player__button--display" type="button" aria-label="Кнопка полноэранного режима">
-                <svg class="media-player__button-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                <!-- <svg class="media-player__button-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
                   <path d="M0 0v6h3V3h3V0H0ZM3 14H0v6h6v-3H3v-3ZM17 0h-3v3h3v3h3V0h-3ZM17 17h-3v3h6v-6h-3v3Z" />
+                </svg> -->
+                <svg class="media-player__button-icon" aria-label="Кнопка полноэранного режима" aria-hidden="true" focusable="false" width="20" height="20">
+                  <use xlink:href="img/sprite.svg#fullscreen"></use>
                 </svg>
               </button>
             </div>
